Reword two terms in German dpkg translation

--- a/po/de.po
+++ b/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.18\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-29 06:58+0300\n"
-"PO-Revision-Date: 2008-04-10 16:14+0200\n"
+"PO-Revision-Date: 2008-05-06 20:57+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -313,7 +313,7 @@ msgstr "»%.*s« ist nicht erlaubt für %s"
 #: lib/fields.c:64
 #, c-format
 msgid "junk after %s"
-msgstr "Müll hinter %s"
+msgstr "Unsinn hinter %s"
 
 #: lib/fields.c:74
 #, c-format
@@ -2878,7 +2878,6 @@ msgstr "Konnte %s nicht ausführen"
 msgid "--command-fd takes one argument, not zero"
 msgstr "--command-fd akzeptiert ein Argument, nicht null"
 
-#
 #: src/main.c:536
 msgid "--command-fd only takes one argument"
 msgstr "--command-fd akzeptiert nur ein Argument"
@@ -4024,18 +4023,18 @@ msgstr "unerwartetes Dateiende in %s in %.255s"
 #: dpkg-deb/extract.c:75 dpkg-split/info.c:52
 #, c-format
 msgid "file `%.250s' is corrupt - %.250s length contains nulls"
-msgstr "Datei »%.250s« ist kaputt - %.250s Länge enthält Nullen"
+msgstr "Datei »%.250s« ist defekt - %.250s Länge enthält Nullen"
 
 #
 #: dpkg-deb/extract.c:82
 #, c-format
 msgid "file `%.250s' is corrupt - negative member length %zi"
-msgstr "Datei »%.250s« ist kaputt - negative Elementlänge %zi"
+msgstr "Datei »%.250s« ist defekt - negative Elementlänge %zi"
 
 #: dpkg-deb/extract.c:84 dpkg-split/info.c:43
 #, c-format
 msgid "file `%.250s' is corrupt - bad digit (code %d) in %s"
-msgstr "Datei »%.250s« ist kaputt - falsche Ziffer (Code %d) in %s"
+msgstr "Datei »%.250s« ist defekt - falsche Ziffer (Code %d) in %s"
 
 #: dpkg-deb/extract.c:97
 msgid "failed getting the current file position"
@@ -4066,7 +4065,7 @@ msgstr "zwischen Elementen"
 #, c-format
 msgid "file `%.250s' is corrupt - bad magic at end of first header"
 msgstr ""
-"Datei »%.250s« ist kaputt - falsche Kennung am Ende der ersten Kopfzeile"
+"Datei »%.250s« ist defekt - falsche Kennung am Ende der ersten Kopfzeile"
 
 #: dpkg-deb/extract.c:143
 #, c-format
@@ -4431,12 +4430,12 @@ msgstr "unbekannter Komprimierungstyp »%s«!"
 #: dpkg-split/info.c:64
 #, c-format
 msgid "file `%.250s' is corrupt - %.250s missing"
-msgstr "Datei »%.250s« ist kaputt - %.250s fehlt"
+msgstr "Datei »%.250s« ist defekt - %.250s fehlt"
 
 #: dpkg-split/info.c:67
 #, c-format
 msgid "file `%.250s' is corrupt - missing newline after %.250s"
-msgstr "Datei »%.250s« ist kaputt - fehlender Zeilenvorschub nach %.250s"
+msgstr "Datei »%.250s« ist defekt - fehlender Zeilenvorschub nach %.250s"
 
 #: dpkg-split/info.c:91
 msgid "unable to seek back"
@@ -4445,12 +4444,12 @@ msgstr "Kann nicht zurückspringen"
 #: dpkg-split/info.c:105
 #, c-format
 msgid "file `%.250s' is corrupt - bad padding character (code %d)"
-msgstr "Datei »%.250s« ist kaputt - falsches Auffüll-Zeichen (Code %d)"
+msgstr "Datei »%.250s« ist defekt - falsches Auffüll-Zeichen (Code %d)"
 
 #: dpkg-split/info.c:109
 #, c-format
 msgid "file `%.250s' is corrupt - nulls in info section"
-msgstr "Datei »%.250s« ist kaputt - Nullen im Info-Bereich"
+msgstr "Datei »%.250s« ist defekt - Nullen im Info-Bereich"
 
 #: dpkg-split/info.c:116
 #, c-format
@@ -4461,39 +4460,39 @@ msgstr ""
 #: dpkg-split/info.c:124
 #, c-format
 msgid "file `%.250s' is corrupt - bad MD5 checksum `%.250s'"
-msgstr "Datei »%.250s« ist kaputt - falsche MD5-Prüfsumme »%.250s«"
+msgstr "Datei »%.250s« ist defekt - falsche MD5-Prüfsumme »%.250s«"
 
 #: dpkg-split/info.c:131
 #, c-format
 msgid "file `%.250s' is corrupt - no slash between part numbers"
-msgstr "Datei »%.250s« ist kaputt - kein Schrägstrich zwischen den Teil-Nummern"
+msgstr "Datei »%.250s« ist defekt - kein Schrägstrich zwischen den Teil-Nummern"
 
 #: dpkg-split/info.c:140
 #, c-format
 msgid "file `%.250s' is corrupt - bad part number"
-msgstr "Datei »%.250s« ist kaputt - falsche Teil-Nummer"
+msgstr "Datei »%.250s« ist defekt - falsche Teil-Nummer"
 
 #: dpkg-split/info.c:145
 #, c-format
 msgid "file `%.250s' is corrupt - bad magic at end of second header"
 msgstr ""
-"Datei »%.250s« ist kaputt - falsche Kennung am Ende der zweiten Kopfzeile"
+"Datei »%.250s« ist defekt - falsche Kennung am Ende der zweiten Kopfzeile"
 
 #: dpkg-split/info.c:147
 #, c-format
 msgid "file `%.250s' is corrupt - second member is not data member"
-msgstr "Datei »%.250s« ist kaputt - zweites Element ist kein Datenelement"
+msgstr "Datei »%.250s« ist defekt - zweites Element ist kein Datenelement"
 
 #: dpkg-split/info.c:153
 #, c-format
 msgid "file `%.250s' is corrupt - wrong number of parts for quoted sizes"
 msgstr ""
-"Datei »%.250s« ist kaputt - falsche Anzahl der Teile für angegebene Größen"
+"Datei »%.250s« ist defekt - falsche Anzahl der Teile für angegebene Größen"
 
 #: dpkg-split/info.c:157
 #, c-format
 msgid "file `%.250s' is corrupt - size is wrong for quoted part number"
-msgstr "Datei »%.250s« ist kaputt - falsche Größe für angegebene Teil-Nummer"
+msgstr "Datei »%.250s« ist defekt - falsche Größe für angegebene Teil-Nummer"
 
 #: dpkg-split/info.c:163
 #, c-format
@@ -4503,7 +4502,7 @@ msgstr "Kann kein fstat auf Teildatei »%.250s« durchführen"
 #: dpkg-split/info.c:169
 #, c-format
 msgid "file `%.250s' is corrupt - too short"
-msgstr "Datei »%.250s« ist kaputt - zu kurz"
+msgstr "Datei »%.250s« ist defekt - zu kurz"
 
 #: dpkg-split/info.c:181 dpkg-split/info.c:222
 #, c-format
@@ -4730,7 +4729,7 @@ msgstr "--listq akzeptiert keine Argumente"
 
 #: dpkg-split/queue.c:198
 msgid "Junk files left around in the depot directory:\n"
-msgstr "Müll-Dateien im Depot-Verzeichnis übriggeblieben:\n"
+msgstr "Sinnlose Dateien im Depot-Verzeichnis übriggeblieben:\n"
 
 #: dpkg-split/queue.c:203 dpkg-split/queue.c:227
 #, c-format
