--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-06  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Minor fixes.
+
 2008-05-05  Wiktor Wandachowicz <siryes@gmail.com>
 
 	* pl.po: Minor fixes.
