--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-20  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Fix one missing space.
+
 2008-05-06  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Minor fixes.
