--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-08  Florent USSEIL  <swiip81@free.fr>
+
+	* fr.po: Updated to 984t.
+
 2008-05-02  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 984t.
