Dpkg::Changelog::Debian: bugfix in changelog parser
* scripts/Dpkg/Changelog/Debian.pm (parse): Bugfix in creation of
an unexpected new changelog entry that lacks an heading line.
Closes: #478925

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-08  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Changelog/Debian.pm (parse): Bugfix in creation of
+	an unexpected new changelog entry that lacks an header line.
+
 2008-05-04  Marco d'Itri  <md@linux.it>
 
 	* scripts/Dpkg/Source/Patch.pm: Add missing import of internerr.
