--- a/po/de.po
+++ b/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.18\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-29 06:58+0300\n"
-"PO-Revision-Date: 2008-05-06 20:57+0200\n"
+"PO-Revision-Date: 2008-05-08 18:17+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -917,13 +917,13 @@ msgstr "ungültiger Paketname »%.250s« in Datei zurückgestellter Trigger »%.
 #: lib/trigdeferred.l:71
 #, c-format
 msgid "truncated triggers deferred file `%.250s'"
-msgstr "abgeschnittene Datei Datei zurückgestellter Trigger »%.250s«"
+msgstr "abgeschnittene Datei zurückgestellter Trigger »%.250s«"
 
 #: lib/trigdeferred.l:75
 #, c-format
 msgid "syntax error in triggers deferred file `%.250s' at character `%s'%s"
 msgstr ""
-"Syntaxfehler in Datei Datei zurückgestellter Trigger »%.250s« bei Zeichen »%s«%"
+"Syntaxfehler in Datei zurückgestellter Trigger »%.250s« bei Zeichen »%s«%"
 "s"
 
 #: lib/trigdeferred.l:112
@@ -939,7 +939,7 @@ msgstr "Kann Triggerbereich nicht sperren"
 #, c-format
 msgid "unable to stat triggers deferred file `%.250s'"
 msgstr ""
-"Kann kein stat auf Datei Datei zurückgestellter Trigger »%.250s« durchführen"
+"Kann kein stat auf Datei zurückgestellter Trigger »%.250s« durchführen"
 
 #: lib/trigdeferred.l:144
 #, c-format
