Correct a translation, thanks to Frank Lichtenheld

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-04-29 06:54+0300\n"
-"PO-Revision-Date: 2008-04-29 19:28+0200\n"
+"PO-Revision-Date: 2008-05-08 18:57+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1066,7 +1066,7 @@ msgid ""
 "usually used with the B<Conflicts> field to force removal of the other "
 "package, if this one also has the same files as the conflicted package."
 msgstr ""
-"Liste an Paketdateien, von denen dieses ersetzt. Dies wird dazu verwendet, "
+"Liste an Paketen, von denen dieses Dateien ersetzt. Dies wird dazu verwendet, "
 "um diesem Paket zu erlauben, Dateien von einem anderen Paket zu ersetzen und "
 "wird gewöhnlich mit dem B<Conflicts>-Feld verwendet, um die Entfernung des "
 "anderen Paketes zu erlauben, falls dieses auch die gleichen Dateien wie das "
