dpkg-source (2.0/3.0 (quilt)): create stamp file with automatic patch
* scripts/Dpkg/Source/Package/V2.pm,
scripts/Dpkg/Source/Package/V3/quilt.pm: Ensure the
.dpkg-source-applied stamp file is created when an automatic patch
is created so that a second build doesn't try to mistakenly
reapply it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-05-08  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package/V2.pm,
+	scripts/Dpkg/Source/Package/V3/quilt.pm: Ensure the
+	.dpkg-source-applied stamp file is created when an automatic patch
+	is created so that a second build doesn't try to mistakenly
+	reapply it.
+
+2008-05-08  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Functions.pm (is_binary): New function
 	to check if a file is binary by using diff against it.
 	* scripts/Dpkg/Source/Package/V2.pm: Check that all files from the
