--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-09  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1601t.
+
 2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/dpkg-man.pot: Regenerated.
