Update German dpkg and dselect translations
Change translation of "breaks" after discussion with the German
translation team.

--- a/dselect/po/de.po
+++ b/dselect/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.18\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2008-04-25 20:22+0200\n"
+"PO-Revision-Date: 2008-05-09 12:41+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1440,7 +1440,7 @@ msgstr "hängt ab (vorher) von"
 # CHECKME: breaks ist keine symmetrische Beziehung
 #: dselect/pkgdisplay.cc:77
 msgid "breaks"
-msgstr "deaktiviert"
+msgstr "beschädigt"
 
 #: dselect/pkgdisplay.cc:78
 msgid "conflicts with"
@@ -1496,7 +1496,7 @@ msgstr "?"
 
 #: dselect/pkgdisplay.cc:100 dselect/pkgdisplay.cc:120
 msgid "Broken"
-msgstr "Kaputte"
+msgstr "Defekte"
 
 #: dselect/pkgdisplay.cc:101
 msgid "New"
