--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-09  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Adjust translation of "breaks".
+
 2008-05-08  Florent USSEIL  <swiip81@free.fr>
 
 	* fr.po: Updated to 984t.
