--- a/po/de.po
+++ b/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.18\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-29 06:58+0300\n"
-"PO-Revision-Date: 2008-05-08 18:17+0200\n"
+"PO-Revision-Date: 2008-05-09 12:39+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1355,13 +1355,13 @@ msgstr "Installation von »%.250s«"
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
 msgstr ""
-"dpkg: Ziehe Dekonfiguration von %s in Betracht, welches durch %s deaktiviert "
+"dpkg: Ziehe Dekonfiguration von %s in Betracht, welches durch %s beschädigt "
 "würde ...\n"
 
 #: src/archives.c:927
 #, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: Ja, werde %s dekonfigurieren (deaktiviert durch %s).\n"
+msgstr "dpkg: Ja, werde %s dekonfigurieren (beschädigt durch %s).\n"
 
 #: src/archives.c:931 src/archives.c:1056
 #, c-format
@@ -1375,7 +1375,7 @@ msgstr ""
 #: src/archives.c:939
 #, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: Warnung - ignoriere Deaktivierung, kann trotzdem weitermachen!\n"
+msgstr "dpkg: Warnung - ignoriere Beschädigung, kann trotzdem weitermachen!\n"
 
 #: src/archives.c:945
 #, c-format
@@ -1383,13 +1383,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
-"Installation von %.250s würde %.250s deaktivieren, und\n"
+"Installation von %.250s würde %.250s beschädigen, und\n"
 " Dekonfiguration ist nicht erlaubt (--auto-deconfigure könnte helfen)"
 
 #: src/archives.c:949
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr "Installation von %.250s würde existierende Software deaktivieren"
+msgstr "Installation von %.250s würde existierende Software beschädigen"
 
 #: src/archives.c:982
 #, c-format
@@ -1899,7 +1899,7 @@ msgstr "%s schlägt %s vor"
 #: src/depcon.c:168
 #, c-format
 msgid "%s breaks %s"
-msgstr "%s deaktiviert %s"
+msgstr "%s beschädigt %s"
 
 #: src/depcon.c:171
 #, c-format
@@ -2627,8 +2627,8 @@ msgstr ""
 "                               übergehen.\n"
 "  -G|--refuse-downgrade      Pakete mit früherer als der installierten\n"
 "                               Version übergehen.\n"
-"  -B|--auto-deconfigure      Installieren, selbst wenn es andere Pakete "
-"zerstört.\n"
+"  -B|--auto-deconfigure      Installieren, selbst wenn es andere Pakete\n"
+"                               beschädigt.\n"
 "  --[no-]triggers            Resultierende Triggerverarbeitung übergehen "
 "oder\n"
 "                               erzwingen.\n"
@@ -2995,7 +2995,7 @@ msgstr "  Paket %s ist nicht installiert.\n"
 #: src/packages.c:471
 #, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr " %s (%s) deaktiviert %s und ist %s.\n"
+msgstr " %s (%s) beschädigt %s und ist %s.\n"
 
 #: src/packages.c:479
 #, c-format
