--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-09  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Adjust translation of "breaks".
+
 2008-05-03  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 288t.
