Translate one more paragraph for dselect into German

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-09  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1584t0f17u.
+
 2008-05-09  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1601t.
