--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-05-08 22:14+0200\n"
-"PO-Revision-Date: 2008-05-08 22:43+0200\n"
+"PO-Revision-Date: 2008-05-09 17:21+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -11929,6 +11929,12 @@ msgid ""
 " priority+section  available+priority  status+priority\n"
 " section+priority  available+section   status+section\n"
 msgstr ""
+"Die List-Sortierreihenfolge kann durch wiederholtes\n"
+"Drücken der Tasten B<»o«> and B<»O«> verändert werden.\n"
+"Die folgenden Sortierreihenfolgen können ausgewählt werden:\n"
+" alphabetisch      verfügbar           Status\n"
+" Priorität+Bereich verfügbar+Priorität Status+Priorität\n"
+" Bereich+Priorität verfügbar+Bereich   Status+Bereich\n"
 
 # type: Plain text
 #: ../../man/dselect.1:352
