French translation updated (LCFC)

--- a/po/fr.po
+++ b/po/fr.po
@@ -25,7 +25,7 @@ msgstr ""
 "Project-Id-Version: dpkg.fr.po\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-29 06:58+0300\n"
-"PO-Revision-Date: 2008-05-07 22:18+0200\n"
+"PO-Revision-Date: 2008-05-08 18:18+0200\n"
 "Last-Translator: Florent USSEIL <swiip81@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,6 +33,24 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
 
+# #######################################
+# Notes de traduction
+#
+# trigger              : déclenchement
+#
+# triggers-awaited     : « déclenchements-à-venir »
+# triggers-pending     : « déclenchements-en-attente »
+# triggers-deferred    : « déclenchements-différé »
+#
+# awaited trigger      : déclenchement à venir
+# pending trigger      : déclenchement en attente
+# triggers deferred    : déclenchements différés
+# trigger interests    : déclenchement demandés
+#
+# triggers are awaited : des déclenchements sont à venir
+# triggers are pending : des déclenchements sont en attente
+#
+# #######################################
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
 msgstr "impossible d'ouvrir « tmpfile » pour « vsnprintf »"
@@ -509,12 +527,12 @@ msgstr "valeur du champ « déclenchement-en-attente » interdite dans ce cont
 #: lib/fields.c:514
 #, c-format
 msgid "illegal pending trigger name `%.255s': %s"
-msgstr "nom du « déclenchement-en-attente » illégal « %.255s » : %s"
+msgstr "nom du déclenchement en attente illégal « %.255s » : %s"
 
 #: lib/fields.c:518
 #, c-format
 msgid "duplicate pending trigger `%.255s'"
-msgstr "« déclenchement-en-attente » en double « %.255s »"
+msgstr "déclenchement en attente en double « %.255s »"
 
 #: lib/fields.c:533
 msgid "value for `triggers-awaited' field not allowed in this context"
@@ -524,12 +542,12 @@ msgstr ""
 #: lib/fields.c:539
 #, c-format
 msgid "illegal package name in awaited trigger `%.255s': %s"
-msgstr "nom de paquet illégal dans le « déclenchement-à-venir » « %.255s » : %s"
+msgstr "nom de paquet illégal dans le déclenchement à venir « %.255s » : %s"
 
 #: lib/fields.c:545
 #, c-format
 msgid "duplicate awaited trigger package `%.255s'"
-msgstr "paquet de « déclenchement-à-venir » en double « %.255s »"
+msgstr "paquet du déclenchement à venir en double « %.255s »"
 
 #: lib/lock.c:47
 msgid "unable to unlock dpkg status database"
@@ -837,22 +855,24 @@ msgstr "« Configured-Version » du paquet dans un état inapproprié"
 #: lib/parse.c:271
 #, c-format
 msgid "package has status %s but triggers are awaited"
-msgstr "paquet dans l'état « %s » mais ayant des « déclenchements-à-venir »"
+msgstr "paquet dans l'état « %s » mais des déclenchements sont à venir"
 
 #: lib/parse.c:275
 msgid "package has status triggers-awaited but no triggers awaited"
-msgstr "paquet dans l'état « déclenchements-à-venir » mais n'en ayant pas"
+msgstr ""
+"paquet dans l'état « déclenchements-à-venir » mais aucun déclenchement n'est "
+"à venir"
 
 #: lib/parse.c:281
 #, c-format
 msgid "package has status %s but triggers are pending"
-msgstr "paquet dans l'état « %s » mais ayant des « déclenchements-en-attente »"
+msgstr "paquet dans l'état « %s » mais aucun déclenchement n'est en attente"
 
 #: lib/parse.c:285
 msgid "package has status triggers-pending but no triggers pending"
 msgstr ""
-"paquet dans l'état « déclenchement-en-attente » mais n'ayant pas de « "
-"déclenchement-en-attente »"
+"paquet dans l'état « déclenchement-en-attente » mais n'ayant pas de "
+"déclenchements en attente"
 
 #: lib/parse.c:295
 msgid "Package which in state not-installed has conffiles, forgetting them"
@@ -954,81 +974,81 @@ msgstr "Parenthèse fermante manquante dans le format\n"
 #, c-format
 msgid "invalid package name `%.250s' in triggers deferred file `%.250s'"
 msgstr ""
-"nom de paquet invalide « %.255s » dans le fichier de « déclenchement-différé » "
+"nom de paquet invalide « %.255s » dans le fichier des déclenchements différés "
 "« %.255s »"
 
 #: lib/trigdeferred.l:71
 #, c-format
 msgid "truncated triggers deferred file `%.250s'"
-msgstr "fichier de « déclenchement-différé » tronqué « %.255s »"
+msgstr "fichier des déclenchements différés tronqué « %.255s »"
 
 #: lib/trigdeferred.l:75
 #, c-format
 msgid "syntax error in triggers deferred file `%.250s' at character `%s'%s"
 msgstr ""
-"erreur de syntaxe dans le fichier de « déclenchement-différé » « %.255s » à la "
+"erreur de syntaxe dans le fichier des déclenchements différés « %.255s » à la "
 "position « %s » %s"
 
 #: lib/trigdeferred.l:112
 #, c-format
 msgid "unable to open/create triggers lockfile `%.250s'"
 msgstr ""
-"impossible d'ouvrir ou créer le verrou du fichier de « déclenchement » "
+"impossible d'ouvrir ou créer le verrou du fichier des déclenchements "
 "« %.255s »"
 
 #: lib/trigdeferred.l:119
 msgid "unable to lock triggers area"
-msgstr "impossible de verrouiller l'espace de « déclenchement »"
+msgstr "impossible de verrouiller l'espace des déclenchements"
 
 #: lib/trigdeferred.l:130
 #, c-format
 msgid "unable to stat triggers deferred file `%.250s'"
-msgstr "impossible d'analyser le fichier de « déclenchement-différé » « %.255s »"
+msgstr "impossible d'analyser le fichier des déclenchements différés « %.255s »"
 
 #: lib/trigdeferred.l:144
 #, c-format
 msgid "unable to open triggers deferred file `%.250s'"
-msgstr "impossible d'ouvrir le fichier de « déclenchement-différé » « %.255s »"
+msgstr "impossible d'ouvrir le fichier des déclenchements différés « %.255s »"
 
 #: lib/trigdeferred.l:158
 #, c-format
 msgid "unable to open/create new triggers deferred file `%.250s'"
 msgstr ""
-"impossible d'ouvrir ou créer un nouveau fichier de « déclenchement-différé » "
+"impossible d'ouvrir ou créer un nouveau fichier des déclenchements différés "
 "« %.255s »"
 
 #: lib/trigdeferred.l:178
 #, c-format
 msgid "error reading triggers deferred file `%.250s'"
-msgstr "erreur de lecture du fichier de « déclenchement-différé » « %.255s »"
+msgstr "erreur de lecture du fichier des déclenchements différés « %.255s »"
 
 #: lib/trigdeferred.l:186
 #, c-format
 msgid "unable to write new triggers deferred file `%.250s'"
 msgstr ""
-"impossible d'enregistrer le nouveau fichier de « déclenchement-différé » "
+"impossible d'enregistrer le nouveau fichier des déclenchements différés "
 "« %.255s »"
 
 #: lib/trigdeferred.l:191
 #, c-format
 msgid "unable to close new triggers deferred file `%.250s'"
 msgstr ""
-"impossible de fermer le nouveau fichier de « déclenchement-différé » « %.255s »"
+"impossible de fermer le nouveau fichier des déclenchements différés « %.255s »"
 
 #: lib/trigdeferred.l:195
 #, c-format
 msgid "unable to install new triggers deferred file `%.250s'"
 msgstr ""
-"impossible d'installer le nouveau fichier de « déclenchement-différé » "
+"impossible d'installer le nouveau fichier des déclenchements différés "
 "« %.255s »"
 
 #: lib/triglib.c:42
 msgid "empty trigger names are not permitted"
-msgstr "noms vides interdits pour les « déclenchements »"
+msgstr "noms vides interdits pour les déclenchements"
 
 #: lib/triglib.c:46
 msgid "trigger name contains invalid character"
-msgstr "nom de « déclenchement » contenant un caractère invalide"
+msgstr "nom de déclenchement contenant un caractère invalide"
 
 #: lib/triglib.c:256
 #, c-format
@@ -1036,20 +1056,20 @@ msgid ""
 "invalid or unknown syntax in trigger name `%.250s' (in trigger interests for "
 "package `%.250s')"
 msgstr ""
-"syntaxe inconnue ou invalide dans le nom du « déclenchement » "
-"« %.255s » ( dans le « déclenchement-à-intérêt » pour le paquet « %.255s »)"
+"syntaxe inconnue ou invalide dans le nom du déclenchement « %.255s » ( dans "
+"les déclenchements demandés par le paquet « %.255s »)"
 
 #: lib/triglib.c:291
 #, c-format
 msgid "failed to open trigger interest list file `%.250s'"
 msgstr ""
-"impossible d'ouvrir le fichier liste de « déclenchement-à-intérêt » « %.255s »"
+"impossible d'ouvrir le fichier liste des déclenchements demandés par le "
+"paquet « %.255s »"
 
 #: lib/triglib.c:320
 #, c-format
 msgid "failed to rewind trigger interest file `%.250s'"
-msgstr ""
-"impossible de relire le fichier de « déclenchement-à-intérêt » « %.255s »"
+msgstr "impossible de relire le fichier des déclenchements demandés « %.255s »"
 
 #: lib/triglib.c:325
 #, c-format
@@ -1057,64 +1077,63 @@ msgid ""
 "trigger interest file `%.250s' syntax error; illegal package name `%.250s': "
 "%.250s"
 msgstr ""
-"erreur de syntaxe dans le fichier de « déclenchement-à-intérêt » « %.255s » ; "
+"erreur de syntaxe dans le fichier des déclenchements demandés « %.255s » ; "
 "nom du fichier « %.255s » illégal : %.250s"
 
 #: lib/triglib.c:347
 #, c-format
 msgid "unable to create new trigger interest file `%.250s'"
 msgstr ""
-"impossible de créer un nouveau fichier de « déclenchement-à-intérêt » "
-"« %.250s »"
+"impossible de créer un nouveau fichier des déclenchements demandés « %.250s »"
 
 #: lib/triglib.c:359
 #, c-format
 msgid "unable to write new trigger interest file `%.250s'"
 msgstr ""
-"impossible d'enregistrer un nouveau fichier de « déclenchement-à-intérêt » "
+"impossible d'enregistrer un nouveau fichier des déclenchements demandés "
 "« %.250s »"
 
 #: lib/triglib.c:364
 #, c-format
 msgid "unable to install new trigger interest file `%.250s'"
 msgstr ""
-"impossible d'installer une nouvelle version de fichier de « déclenchement-à-"
-"intérêt » « %.255s »"
+"impossible d'installer une nouvelle version de fichier des déclenchements "
+"demandés « %.255s »"
 
 #: lib/triglib.c:421
 #, c-format
 msgid ""
 "duplicate file trigger interest for filename `%.250s' and package `%.250s'"
 msgstr ""
-"fichier de « déclenchement-à-intérêt » en double avec le nom « %.250s » pour "
-"le paquet « %.250s »"
+"fichier des déclenchements demandés en double avec le nom « %.250s » pour le "
+"paquet « %.250s »"
 
 #: lib/triglib.c:444
 #, c-format
 msgid "unable to create new file triggers file `%.250s'"
-msgstr "impossible de créer un nouveau fichier de « déclenchement » « %.250s »"
+msgstr "impossible de créer un nouveau fichier de déclenchements « %.250s »"
 
 #: lib/triglib.c:453
 #, c-format
 msgid "unable to write new file triggers file `%.250s'"
 msgstr ""
-"impossible d'enregistrer le nouveau fichier de « déclenchement » « %.250s »"
+"impossible d'enregistrer le nouveau fichier des déclenchements « %.250s »"
 
 #: lib/triglib.c:458
 #, c-format
 msgid "unable to install new file triggers file as `%.250s'"
 msgstr ""
-"impossible d'installer le nouveau fichier de « déclenchement » comme « %.250s »"
+"impossible d'installer le nouveau fichier des déclenchements comme « %.250s »"
 
 #: lib/triglib.c:479
 #, c-format
 msgid "unable to read file triggers file `%.250s'"
-msgstr "impossible de lire le fichier de « déclenchement » « %.250s »"
+msgstr "impossible de lire le fichier des déclenchements « %.250s »"
 
 #: lib/triglib.c:487
 #, c-format
 msgid "syntax error in file triggers file `%.250s'"
-msgstr "erreur de syntaxe dans le fichier de « déclenchement » « %.255s »"
+msgstr "erreur de syntaxe dans le fichier des déclenchements « %.255s »"
 
 #: lib/triglib.c:491
 #, c-format
@@ -1122,7 +1141,7 @@ msgid ""
 "file triggers record mentions illegal package name `%.250s' (for interest in "
 "file `%.250s'): %.250s"
 msgstr ""
-"l'enregistrement du fichier de « déclenchement » indique un nom de paquet "
+"l'enregistrement du fichier des déclenchements indique un nom de paquet "
 "illégal pour « %.250s » ( le nom du fichier est « %.250s » ) : %.250s"
 
 #: lib/triglib.c:585
@@ -1131,36 +1150,36 @@ msgid ""
 "triggers ci file `%.250s' contains illegal trigger syntax in trigger name `"
 "%.250s': %.250s"
 msgstr ""
-"le fichier de « déclenchement CI » « %.250s » contient une syntaxe illégale "
-"dans le « déclenchement » de nom « %.250s » : %.250s"
+"le fichier des déclenchements CI « %.250s » contient une syntaxe illégale "
+"dans le déclenchement de nom « %.250s » : %.250s"
 
 #: lib/triglib.c:605
 #, c-format
 msgid "unable to open triggers ci file `%.250s'"
-msgstr "impossible d'ouvrir le fichier de « déclenchement CI » « %.250s »"
+msgstr "impossible d'ouvrir le fichier des déclenchements CI « %.250s »"
 
 #: lib/triglib.c:620
 msgid "triggers ci file contains unknown directive syntax"
 msgstr ""
-"le fichier de « déclenchement CI » contient une directive de syntaxe inconnue"
+"le fichier des déclenchements CI contient une directive de syntaxe inconnue"
 
 #: lib/triglib.c:629
 #, c-format
 msgid "triggers ci file contains unknown directive `%.250s'"
 msgstr ""
-"le fichier de « déclenchement CI » contient la directive inconnue « %.250s »"
+"le fichier des déclenchements CI contient la directive inconnue « %.250s »"
 
 #: lib/triglib.c:684
 #, c-format
 msgid "unable to create triggers state directory `%.250s'"
-msgstr "impossible de créer le répertoire d'état du « déclenchement » « %.250s »"
+msgstr "impossible de créer le répertoire d'état du déclenchement « %.250s »"
 
 #: lib/triglib.c:687
 #, c-format
 msgid "unable to set ownership of triggers state directory `%.250s'"
 msgstr ""
-"impossible de positionner le propriétaire du répertoire d'état du « "
-"déclenchement » « %.250s »"
+"impossible de positionner le propriétaire du répertoire d'état du "
+"déclenchement « %.250s »"
 
 #: lib/utils.c:50
 #, c-format
@@ -3078,7 +3097,7 @@ msgid ""
 msgstr ""
 "le paquet « %.250s » n'est pas prêt pour les traitement des « déclenchements "
 "»\n"
-" ( état actuel « %.250s » avec aucun « déclenchement-en-attente » )"
+" ( état actuel « %.250s » avec aucun déclenchement en attente )"
 
 #: src/packages.c:334
 #, c-format
