--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-10  Sven Joachim  <svenjoac@gmx.de>
+
+	* po/de.po: Fix typos.
+
 2008-05-09  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1584t0f17u.
