--- a/po/fr.po
+++ b/po/fr.po
@@ -3852,7 +3852,7 @@ msgid ""
 "\n"
 msgstr ""
 "Options:\n"
-"  --admindir=<répertoire>           Utilise <répertoire> au lleu de « %s ».\n"
+"  --admindir=<répertoire>           Utilise <répertoire> au lieu de « %s ».\n"
 "  --by-package=<paquet>           Passe outre le traitement des « "
 "déclenchements (triggers)»\n"
 "                                     (normalement commandité par dpkg).\n"
