--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Change the "2.0" and "3.0 (quilt)" source packages to refuse by default
     binary files in the debian sub-directory. They have to be whitelisted
     through debian/source/include-binaries. Closes: #473041
+  * Make sure triggers are activated when a file is removed in a directory
+    shared by multiple packages. Closes: #479850
   
   [ Helge Kreutzmann ]
   * Minor fixes and clarifications to man pages.
