Add a --query option to update-alternatives. Closes: #336091, #441904
* scripts/update-alternatives.pl: add a --query option that works like
--display but outputs a machine parseable rfc822-like output.
* man/update-alternatives.8: document that new option, and the
associated format.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-11  Pierre Habouzit  <madcoder@debian.org>
+
+	* scripts/update-alternatives.pl: add a --query option that works like
+	--display but outputs a machine parseable rfc822-like output.
+	* man/update-alternatives.8: document that new option, and the
+	associated format.
+
 2008-05-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gensymbols.pl: Do not accept empty parameters for
