--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * dpkg-gensymbols now refuses empty values for the the -v -P and -e
     parameters.
 
+  [ Pierre Habouzit ]
+  * Add a --query option to update-alternatives. Closes: #336091, #441904
+
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
 
