--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-11  Pierre Habouzit  <madcoder@debian.org>
 
+	* lib/showpkg.c (show1package): Use %zd instead of %d in sprintf()
+	call with a size_t parameter.
+
+2008-05-11  Pierre Habouzit  <madcoder@debian.org>
+
 	* scripts/update-alternatives.pl: add a --query option that works like
 	--display but outputs a machine parseable rfc822-like output.
 	* man/update-alternatives.8: document that new option, and the
