Updated Brazilian Portuguese translation for dpkg and dselect
	* po/pt_BR.po: Updated to 984t.
	* dselect/po/pt_BR.po: Updated to 288t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Minor fixes and clarifications to man pages.
 
   [ Updated dpkg translations ]
+  * Brazilian Portuguese (Felipe Augusto van de Wiel). Closes: #480579
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
   * Polish (Wiktor Wandachowicz).
@@ -68,13 +69,14 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
 
   [ Updated dselect translations ]
+  * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * French (Christian Perrier).
   * German (Sven Joachim).
   * Russian (Yuri Kozlov). Closes: #478802
   * Slovak (Ivan Masár). Closes: #479007
   * Czech (Miroslav Kure).
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 11 Apr 2008 22:46:48 +0100
+ -- Felipe Augusto van de Wiel <faw@debian.org>  Sun, 11 May 2008 16:24:43 -0300
 
 dpkg (1.14.18) unstable; urgency=low
 
