--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-11  Felipe Augusto van de Wiel  <faw@debian.org>
+
+	* pt_BR: Updated to 288t.
+
 2008-05-09  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Adjust translation of "breaks".
