libdpkg: Add new rtrim_slash_slashdot private function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-12  Guillem Jover  <guillem@debian.org>
+
+	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-priv.h' and 'path.c'.
+	* lib/dpkg-priv.h: New file.
+	* lib/path.c: Likewise.
+
 2008-05-11  Pierre Habouzit  <madcoder@debian.org>
 
 	* lib/showpkg.c (show1package): Use %zd instead of %d in sprintf()
