dpkg-gencontrol: Consider also custom Package-Type fields for warnings
Closes: #452273

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.14.19) UNRELEASED; urgency=low
     Based on a patch by Russell Coker. Closes: #474339
   * Add missing import of internerr in Dpkg::Source::Patch.pm.
     Thanks to Marco d'Itri. Closes: #479205
+  * Consider also custom Package-Type fields when printing warnings in
+    dpkg-gencontrol. Closes: #452273
 
   [ Raphael Hertzog ]
   * Add missing import of subprocerr in Dpkg::Source::Package. Thanks to Sven
