--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-12  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Get Package-Type field value also from
+	custom field.
+
 2008-05-11  Raphael Hertzog  <hertzog@debian.org>
 
 	* src/processarc.c (process_archive): While removing files that
