--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.19.
+
+2008-05-12  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl: Get Package-Type field value also from
 	custom field.
 
