--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.20) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 12 May 2008 09:04:34 +0300
+
 dpkg (1.14.19) unstable; urgency=low
 
   [ Guillem Jover ]
