Mark and coalesce similar strings for translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
+	* src/help.c (do_script): Expand 'maint' to 'maintainer' in string.
+	(vmaintainer_script_installed): Mark string for translation. Change
+	strings so that they get merged by gettext with similar ones.
+	(maintainer_script_new): Likewise.
+
+2008-05-12  Guillem Jover  <guillem@debian.org>
+
 	* dselect/method.cc: Include <dpkg-priv.h>. Use setup_subproc_signals
 	and cu_subproc_signals instead of cu_restoresignals and duped code
 	in falliblesubprocess.
