--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Do not suggest manually changing the alternative symlinks on
     update-alternative's verbose mode. Closes: #412487
   * Refactor subprocess signal setup.
+  * Mark and coalesce similar strings for translation.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
